--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -1,4 +1,75 @@
+.section-share {
+  height: 330px;
+  width: 100%;
+  // padding: 50px;
+  // vì sao phải bọc thêm 1 div nữa , xem lại cái header
+  .section-container {
+    padding: 15px 130px 10px 130px;
+      .section-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+          .title-section {
+          font-family: Montserrat ;
+          font-size: 24px ;
+          font-weight: 700 ;
+          line-height: 36px ;
+          padding: 15px 0px 5px ;
+            
+          }
+          .btn-section{
+            font-family: Montserrat ;
+            font-size: 24px ;
+            font-weight: 700 ;
+            line-height: 36px ;
+            padding: 15px 0px 5px ;
 
+
+            opacity: 0.7 !important;
+            cursor: pointer;
+              &:hover{
+                opacity: 1;
+                background-color: bisque;
+                border-radius: 6px;  
+              }
+            }
+
+      }
+    .section-share{
+      &.section-specialty{
+        background-color: green;
+      }
+
+      .section-body{
+
+        .specialty-customize {
+            .bg-img {
+              width: 278px !important;
+              height: 156px !important;
+              cursor: pointer;
+              padding-left: 5px;
+              padding-right: 5px;
+              border: 1px solid #eee;
+              background: url("../../assets/speciality/vg1.jpeg");
+            }
+            
+            .pictureT{
+              
+            }
+
+        }
+      }
+    }
+    .slick-slide{
+      width: 278px !important;
+      height: 156px !important;
+      background-color: bisque !important;
+      border-radius: 4px !important;
+      margin-left: 20px !important;
+    }
+  }
+  
+}
 .slick-prev{
     width: 40px !important;
     height: 40px !important;
@@ -8,8 +79,6 @@
     top: 76px !important;
     z-index: 2;
   }
-  
-  
   .slick-next {
     width: 40px !important;
     display: block ;
