--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -3,21 +3,48 @@
 .header-container {
     z-index: 99;
     display: flex;
+    position: relative;
+    height: 40px;
+
     justify-content: space-between;
     background-color: $colormain;
     color: $common-text-color;
-    height: 40px;
-    position: relative;
-    .btn-logout {
-        color: $common-text-color;
-        line-height: 40px;
-        height: 40px;
-        padding: 0 10px;
-        &:hover {
-            background-color: darken($colormain, 5);
+
+    .languages{
+        gap: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .language-vi{
+            padding: 10px;
+            cursor: pointer;
+            opacity: 0.8;
+            &.active {
+                opacity: 1;
+                color: red;
+            }
         }
-        i {
-            font-size: $base-size + 1px;
+        .language-en{
+            padding: 10px;
+            cursor: pointer;
+            opacity: 0.8;
+            &.active {
+                opacity: 1;
+                color: blue;
+            }
+        }
+        .btn-logout {
+            color: $common-text-color;
+            line-height: 40px;
+            height: 40px;
+            padding: 0 10px;
+            &:hover {
+                background-color: darken($colormain, 5);
+            }
+            i {
+                font-size: $base-size + 1px;
+            }
         }
     }
+
 }
