--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -15,6 +15,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        .welcome{
+            
+        }
         .language-vi{
             padding: 10px;
             cursor: pointer;
