--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -91,7 +91,7 @@
 
 .section-outstanding-doctor {
   .customize-border {
-    border: 1px solid red;
+    // 
     padding: 4px;
     background-color: white;
     width: 278px !important;
