--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -64,7 +64,7 @@
           background-image: url("../../assets/medical-facility/vietDuc.jpeg");
         }
         .section-outstanding-doctor {
-          // background-image: url("../../assets/outstanding-doctor/doctorss.jpeg");
+          background-image: url("../../assets/outstanding-doctor/doctorss.jpeg");
           width: 120px !important ;
           height: 120px !important;
           border-radius: 100rem !important;
@@ -93,7 +93,6 @@
 }
 
 .section-outstanding-doctor {
-
   .customize-border {
     .outer-bg{
       padding: 20px;
