--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -31,7 +31,7 @@
         border-radius: 5px;
         border: 2px solid #0071ba;
         background-color: #fff;
-        color: #0071ba;
+        background-color: #acc32a;
         height: 30px;
         margin-top: 30px;
 
