--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -35,7 +35,7 @@
 
             &.active {
                 background-color: #0071ba;
-                color: #fff;
+                color: #610808;
             }
         }
     }
